--- a/body.css
+++ b/body.css
@@ -1,17 +1,46 @@
 :root {
-    --first-color:#021d34;
-    --second-color: #012e46;
-    --thirty-color: #153f59;
-    --font-color:#94b8d7;
+    --background-color:#1b2233;
+    --nav-color: #3b5378;
+    --thirty-color: #f9faf5;
+    --main-color: #3f3ac7;
+    --main-color2:#f9faf5;
+    --font-color: #fff;
 }
-    
+ /*     colores originales
+
+    --background-color:#021d34;
+    --nav-color: #012e46;
+    --thirty-color: #153f59;
+    --main-color: #302c9b;
+    --main-color2:#cfd4d8;
+    --font-color:#cfd4d8; */
 body{
-    background-color: var(--first-color);
+    background-color: var(--background-color);
     font-family: 'Montserrat', sans-serif;
     color: var(--font-color);
-
+   
+    /*background: -webkit-gradient(linear, left top, left bottom, from(#000a23), color-stop(#02152b) ,color-stop(#021d34), color-stop(#02253d) ,color-stop(#012e46),to(#153f59));
+    background: -o-linear-gradient(top, #000a23, #02152b ,#021d34, #02253d ,#012e46,#153f59);
+    background: linear-gradient(to bottom, #000a23, #02152b ,#021d34, #02253d ,#012e46,#153f59);    */
+    background: url(./img/liquid-cheese-1.svg);
+    background-size:cover;
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    max-height: 100vh;
+    min-width: 100%;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 
+.color-h1{
+    color:var(--main-color);
+    font-weight: 700;
     
-        
+}
+
+.color {
+    color:var(--main-color);
+   
+}
