--- a/profile.css
+++ b/profile.css
@@ -1,45 +1,166 @@
-
-.home { 
-    display: flex;
-    padding-left: 10px;
-    align-items: center;
-    justify-content: center;
+.home {
+    padding-top:110px;
+    height:100vh;
+}
+.home-info h1,h2{
     text-align: center;
-    font-size:1rem;
-    font-weight: 600;
-
-    
-}
-
-.home h2{
-    font-size: .9rem;
-    letter-spacing: 5px;
-    padding-bottom: 15px;
-    font-weight: 600;
-}
-.home-img {
-    display:flex;
-    padding-bottom: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-    align-items:center;
+    align-items: center;
+}
+
+.home-info h1{ 
+    font-size:2rem;
+    font-weight: 600;    
+}
+    
+.home-info h2{
+    font-size: .9rem;
+    font-weight:500;
+    letter-spacing: 5px;
+    color:var(--font-color);
+}
+    
+
+.home-img {
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-pack:center;
+        -ms-flex-pack:center;
+            justify-content:center;
+
+}
+    
+    
+/* esto lo pongo para que la imagen del responsive se vea xq no puedo acomodar la animacion*/  
+
+.home-img-responsive {
+    
+    display: none;
+
+}     
+
+
+/*---------------------------el aro xD-------------------------------------*/
+
+.aro{
+    inset: 40px;
+    border:6px solid #070a1c;
+    position: relative;
+    z-index: 3;
+    width: 350px;
+    height: 350px;
+    background: var(--background-color);
+    border-radius: 50%;
+    top:1;
+    left:0;
+    overflow:hidden;
     
 }
-.home-img img{
-   
-    width:30vh;
-    height:30vh;
+
+.aro img{
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-pack:center;
+        -ms-flex-pack:center;
+            justify-content:center;
+    -ms-flex-item-align:center;
+        align-self:center;
+    padding:4px;
+    position:absolute;
+    border-radius:50%;
+    width:100%;
+    height:100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -webkit-transition:0.5s;
+    -o-transition:0.5s;
+    transition:0.5s;
+    pointer-events: none;
+}
+    
+    
+
+
+.aro::before{
+    content:'';
+    position: absolute;
+    inset:-10px 140px;
+    background: -o-linear-gradient(135deg, var(--main-color), var(--main-color2));
+    background: linear-gradient(315deg, var(--main-color), var(--main-color2));
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+    -webkit-animation: circulo 4s linear infinite;
+            animation: circulo 4s linear infinite;
+}
+.aro:hover::before{
+    inset: -20px 0px;
+
+}
+
+.aro::after{
+    content:'';
+    position:absolute;
+    inset:6px;
+    background: var(--color-first);
     border-radius: 50%;
+    z-index: 1;
 }
 
 
-@media (max-width:950px){
+/* =================================================================^*/
+
+
+
+
+
+ @-webkit-keyframes circulo{
+    
+    0% {
+        -webkit-transform:rotate(9deg);
+                transform:rotate(9deg);
+    }
+     
+    100%{
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg)
+    }
+}
+
+
+
+
+
+ @keyframes circulo{
+    
+    0% {
+        -webkit-transform:rotate(9deg);
+                transform:rotate(9deg);
+    }
+     
+    100%{
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg)
+    }
+} 
+
+
+
+@media (max-width:768px){
     
     .home { 
-        padding-left: 10px;
+        padding-top:120px;
         text-align: center;
         font-size:1rem;
-        
     }
+        
     
     .home h2{
         font-size: .9rem;
@@ -47,18 +168,45 @@
         padding-bottom: 15px;
     }
     .home-img {
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        padding-bottom: 15px;
-        justify-content: center;
-        align-items:center;
-        
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align:center;
+            -ms-flex-align:center;
+                align-items:center;
         
     }
+        
+     
+    .home-img-responsive {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack:center;
+            -ms-flex-pack:center;
+                justify-content:center;
+    }
+    .home-img-responsive img{
+        width:35vh;
+        height:35vh;
+        margin:30px;
+        border-radius: 50%;
+
+    }       
     .home-img img{
-       
         width:30vh;
         height:30vh;
+        margin:40px;
         border-radius: 50%;
-        padding:10px;
     }
+
+    .aro{
+       display:none;
+        
+    }
+        
+    
 }
