--- a/about-me.css
+++ b/about-me.css
@@ -24,8 +24,6 @@
     object-fit: cover;
     border-radius: 50px;
     border: 2px solid var(--nav-color);
-    
-
 }
 
 .about-me-text h3{
@@ -37,7 +35,7 @@
     letter-spacing: 5px;
     color: var(--font-color);
     border: 2px solid var(--nav-color);
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
     background:var(--background-color);
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
@@ -47,7 +45,6 @@
     41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
     100px 100px 80px rgba(0, 0, 0, 0.07);
     width:250px;
-
 }
 .about-me-text p {
     display:flex;
@@ -75,15 +72,7 @@
     margin-top:15px
 }
 
-.title:hover{
-    background:var(--main-color); 
-    color:var(--font-color);
-    transition: .3s all linear;
-}
-.title::after{
-    background:none;
 
-}
 
 
 
@@ -139,11 +128,16 @@
 
 @media screen and (max-width:875px) and (min-width:768px){
     .about-me-text p{
-        font-size: .7rem;
+        font-size: .8rem;
+
+    }
+    .about-me-text {
+        min-width:300px;
 
     }
     .about-me-img img {
-        min-width:260px;
+        max-height: 400px;
+        min-width:300px;
     }
 }
 
@@ -154,6 +148,10 @@
         font-size: .8rem;
 
     }
+    .about-me-img img {
+        max-height: 400px;
+        min-width:300px;
+    }
 }
 
 
@@ -162,4 +160,35 @@
         font-size: 1rem;
 
     }
+    .about-me-img img {
+        max-height: 500px;
+        max-width:400px;
+    }
+}
+
+
+
+/*================= 4K=================*/
+
+
+
+@media (min-width:1900px){
+
+    .about-me-img img{
+        width: 900px;
+        height: 900px;
+
+    }
+    
+    .about-me-text h3 {
+        font-size: 3rem;
+        width:550px;
+
+    }
+    .about-me-text p {
+        font-size: 2rem;
+        height:300px;
+    }
+
+
 }
