--- a/profile.css
+++ b/profile.css
@@ -1,6 +1,7 @@
 .home {
     padding-top:110px;
     height:100vh;
+    
 }
 .home-info h1,h2{
     text-align: center;
@@ -15,7 +16,8 @@
 
 .home-info h1{ 
     font-size:2rem;
-    font-weight: 600;    
+    font-weight: 600;   
+    letter-spacing: .9px; 
 }
     
 .home-info h2{
@@ -180,33 +182,95 @@
         
     }
         
-     
-    .home-img-responsive {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
+
+        
+    
+}
+
+@media (max-width:350px){
+
+    .home-info h1{
+        font-size: 1.6rem
+    }
+
+    
+}
+
+
+@media (max-width:370px){
+    .aro{
+        justify-content: center;
+        inset: 40px;
+        border:2px solid #070a1c;
+        position: relative;
+        z-index: 3;
+        width: 315px;
+        height: 315px;
+        background: var(--background-color);
+        border-radius: 50%;
+        top:1;
+        left:0;
+        overflow:hidden;
+        
+    }
+
+    .aro img{
+        display:-webkit-box;
+        display:-ms-flexbox;
+        display:flex;
         -webkit-box-pack:center;
             -ms-flex-pack:center;
                 justify-content:center;
+        -ms-flex-item-align:center;
+            align-self:center;
+        padding:4px;
+        position:absolute;
+        border-radius:50%;
+        width:99%;
+        height:99%;
+        -o-object-fit: cover;
+           object-fit: cover;
+        -webkit-transition:0.5s;
+        -o-transition:0.5s;
+        transition:0.5s;
+        pointer-events: none;
     }
-    .home-img-responsive img{
-        width:35vh;
-        height:35vh;
-        margin:30px;
-        border-radius: 50%;
+}
 
-    }       
-    .home-img img{
-        width:30vh;
-        height:30vh;
-        margin:40px;
-        border-radius: 50%;
+
+/*================= 4K=================*/
+
+
+
+@media (min-width:1900px){
+
+
+    .home-info h1{ 
+        font-size:4rem;
+        font-weight: 600;   
+        letter-spacing: .9px; 
     }
-
+    .home-info h2{ 
+        font-size:2rem;
+        font-weight: 500;   
+        letter-spacing: 10px;
+        color:var(--font-color);
+    }
     .aro{
-       display:none;
+        inset: 200px;
+        border:6px solid #070a1c;
+        position: relative;
+        z-index: 3;
+        width: 600px;
+        height: 600px;
+        background: var(--background-color);
+        border-radius: 50%;
+        top:1;
+        left:0;
+        overflow:hidden;
         
     }
-        
     
+
+
 }
