--- a/about-me.css
+++ b/about-me.css
@@ -1,21 +1,31 @@
-
+/* =================== original=============
 .about-me {
-    display:grid;
+    display:flex;
     grid-template-columns:repeat(2,2fr) ;
     justify-content:center;
     gap:5rem;
     align-items:center;
     padding: 0 40px 0 40px;
-    height: 100vh;
+    height: 70vh;
     background: linear-gradient(rgba(5, 7, 12 , 0.85), rgba(5, 7, 12 , 0.85)),
     url(./img/background-about-me.png) no-repeat center center fixed;
     background-size: cover;
     min-width: 100%;
-    padding:120px;
 }
+*/
+.about-me {
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    height: 70vh;
+    background: linear-gradient(rgba(5, 7, 12 , 0.85), rgba(5, 7, 12 , 0.85)),
+    url(./img/background-about-me.png) no-repeat center center fixed;
+    background-size: cover;
+    min-width: 100%;
+    position: relative;
 
-
-
+}
+/*
     
 .about-me-img img{
     max-width: 100%;
@@ -23,20 +33,30 @@
     height: 580px;
     object-fit: cover;
     border-radius: 50px;
-    border: 2px solid var(--nav-color);
-}
+}*/
 
+.about-me-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .about-me-text h3{
     display:flex;
     justify-content:center;
+    align-self: center;
+    position: absolute;
+    top: 0;
+    width:250px;
     text-align:center;
     font-size:1.8rem;
     font-weight:800;
     letter-spacing: 5px;
+    margin: 80px auto  ;
+    padding:3px 4px;
+    background-color: var(--background-color);
     color: var(--font-color);
-    border: 2px solid var(--nav-color);
-    border-radius: 10px;
-    background:var(--background-color);
+    border-radius: 8px;
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -44,19 +64,20 @@
     22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
     41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
     100px 100px 80px rgba(0, 0, 0, 0.07);
-    width:250px;
+    
 }
+
 .about-me-text p {
     display:flex;
     justify-content:center;
     align-items:center;
     font-size:1.1rem;
     font-weight: 500;
+    max-width: 30rem;
     height:10rem;
     padding:20px;
     background:var(--background-color);
-    border-radius:20px;
-    border: 2px solid var(--nav-color);
+    border-radius:8px;
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -74,97 +95,30 @@
 
 
 
-
-
-@media screen and (max-width:568px) and (min-width:200px){
-    .about-me{ 
-        grid-template-columns:repeat(1,1fr) ;
-        grid-template-rows: repeat(2,2);
-       
-        justify-content:center;
-    }
-    .about-me-img img{
-        height: 260px;
-        
-
-    }
-    .about-me-text p{
-        font-size: .75rem;
-    }
-    .about-me-text h3 {
-        font-size: 1.3rem;
-        
-        margin:-50px auto 30px;
-    }
-}
-
-@media screen and (max-width:768px) and (min-width:568px){
-    .about-me{ 
-        grid-template-columns:repeat(1,1fr) ;
-        justify-content:center;
-        margin:auto;
-    }
-
-   
+@media screen and (max-width: 768px) {
     .about-me-text h3{
-        margin:-60px auto 30px;
+        font-size:1.3rem;
+        margin: 90px auto  ;
         
     }
-   
     .about-me-text p{
-        font-size: .9rem;
-        margin:auto;
-
-    }
-    .about-me-img{
-        margin:-30px auto 0 ;
-
-    }
-    .about-me-img img{
-        width: 260px;
-        height: 260px;
-    }
-}
-
-@media screen and (max-width:875px) and (min-width:768px){
-    .about-me-text p{
-        font-size: .8rem;
-
-    }
-    .about-me-text {
-        min-width:300px;
-
-    }
-    .about-me-img img {
-        max-height: 400px;
-        min-width:300px;
+        font-size:.9rem;
+        height:60%;
+        width:90%;
     }
 }
 
 
 
-@media screen and (max-width:1100px) and (min-width:875px){
-    .about-me-text p{
-        font-size: .8rem;
-
-    }
-    .about-me-img img {
-        max-height: 400px;
-        min-width:300px;
-    }
-}
 
 
-@media screen and (max-width:1250px) and (min-width:1100px){
-    .about-me-text p{
-        font-size: 1rem;
 
-    }
-    .about-me-img img {
-        max-height: 500px;
-        max-width:400px;
-    }
-}
+
+
+
+
+
+
 
 
 
@@ -188,7 +142,7 @@
     .about-me-text p {
         font-size: 2rem;
         height:300px;
+        max-width: 700px ;
     }
-
 
 }
