--- a/profile.css
+++ b/profile.css
@@ -163,7 +163,9 @@
         font-size:1rem;
     }
         
-    
+    .home h1{
+        font-size: 1.7rem;
+    }
     .home h2{
         font-size: .9rem;
         letter-spacing: 5px;
@@ -187,25 +189,26 @@
     
 }
 
-@media (max-width:350px){
+@media (max-width:319px){
 
     .home-info h1{
-        font-size: 1.6rem
+        font-size: 1.5rem
     }
 
     
 }
 
 
-@media (max-width:370px){
+@media  (max-width:370px){
+    
     .aro{
         justify-content: center;
         inset: 40px;
         border:2px solid #070a1c;
         position: relative;
         z-index: 3;
-        width: 315px;
-        height: 315px;
+        width: 310px;
+        height: 310px;
         background: var(--background-color);
         border-radius: 50%;
         top:1;
@@ -226,8 +229,8 @@
         padding:4px;
         position:absolute;
         border-radius:50%;
-        width:99%;
-        height:99%;
+        width: 100%;;
+        height:100%;
         -o-object-fit: cover;
            object-fit: cover;
         -webkit-transition:0.5s;
