--- a/contact.css
+++ b/contact.css
@@ -69,3 +69,11 @@ form{
     transform: translateY(-2px);
 
 }
+
+@media screen and (max-width: 768px){
+
+    form{
+        width: 90%;
+    }
+
+}
