--- a/about-me.css
+++ b/about-me.css
@@ -40,23 +40,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 .about-me-text h3{
     display:flex;
     justify-content:center;
-    align-self: center;
     position: absolute;
-    top: 0;
-    width:250px;
+    top:0;
+    width:15.625rem;
     text-align:center;
     font-size:1.8rem;
     font-weight:800;
-    letter-spacing: 5px;
-    margin: 80px auto  ;
-    padding:3px 4px;
+    letter-spacing: 0.313rem;
+    margin: 8.125rem auto 1.875rem;
+    padding:0.188rem 0.25rem;
     background-color: var(--background-color);
     color: var(--font-color);
-    border-radius: 8px;
+    border-radius: 0.5rem;
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -75,9 +75,9 @@
     font-weight: 500;
     max-width: 30rem;
     height:10rem;
-    padding:20px;
+    padding:1.25rem;
     background:var(--background-color);
-    border-radius:8px;
+    border-radius:0.5rem;
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -89,16 +89,14 @@
 }
 
 
-.about-me-text p{
-    margin-top:15px
-}
+
 
 
 
 @media screen and (max-width: 768px) {
     .about-me-text h3{
-        font-size:1.3rem;
-        margin: 90px auto  ;
+        font-size:1.5rem;
+        margin: 5rem auto  ;
         
     }
     .about-me-text p{
@@ -126,23 +124,18 @@
 
 
 
-@media (min-width:1900px){
+@media (min-width:2559px){
 
-    .about-me-img img{
-        width: 900px;
-        height: 900px;
-
-    }
-    
+   
     .about-me-text h3 {
         font-size: 3rem;
-        width:550px;
+        width:34.375rem;
 
     }
     .about-me-text p {
         font-size: 2rem;
-        height:300px;
-        max-width: 700px ;
+        height:18.75rem;
+        max-width: 60rem;
     }
 
 }
