--- a/profile.css
+++ b/profile.css
@@ -296,6 +296,30 @@
 }
 
 
+@media  (max-width:290px){
+    .home-info h1{
+        font-size: 1.1rem
+    }
+    .home-info h2{
+        font-size: .6rem;
+    
+    }
+    .aro{
+        justify-content: center;
+        border:0.125rem solid #070a1c;
+        position: relative;
+        z-index: 3;
+        width: 15.375rem;
+        height: 15.375rem;
+        background: var(--background-color);
+        border-radius: 50%;
+        top:1;
+        left:0;
+        overflow:hidden;
+        
+    }
+}
+
 /*================= 4K=================*/
 
 
