--- a/about-me.css
+++ b/about-me.css
@@ -52,7 +52,7 @@
     font-size:1.8rem;
     font-weight:800;
     letter-spacing: 0.313rem;
-    margin: 8.125rem auto 1.875rem;
+    margin: 6rem auto 1.875rem;
     padding:0.188rem 0.25rem;
     background-color: var(--background-color);
     color: var(--font-color);
@@ -66,6 +66,7 @@
     100px 100px 80px rgba(0, 0, 0, 0.07);
     
 }
+
 
 .about-me-text p {
     display:flex;
@@ -90,7 +91,29 @@
 
 
 
+.download-cv{
+    margin-top: 1rem;
+    background:var(--background-color);
+    padding:.5rem;
+    border-radius:0.5rem;
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
+    color: var(--font-color);
+    letter-spacing: .123rem;
+    font-weight: 600;
+}
+.download-cv:hover{
+    
+    background: var(--main-color);
+    transition: all .3s ;
+    transform: translateY(-2px);
 
+}
 
 
 @media screen and (max-width: 768px) {
