--- a/profile.css
+++ b/profile.css
@@ -143,7 +143,31 @@
     transition: all .4s;
 }
 
+.register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
 
+}
+.login {
+    font-size:1.3rem;
+    margin: 2rem;
+    padding: 0.2rem;
+    letter-spacing: 0.092rem;
+    font-weight: 500;
+    background-color: var(--background-color);
+    min-width: 13%;
+    text-align: center;
+    border-radius: .5rem;
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
+}
 /* =================================================================^*/
 
 
